# advent-of-code-2024

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
src/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  main.cpp  utility.cpp  utility.hpp
